fixed alt tag having wrong colored, and minor design adjustments to chevrons

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -159,7 +159,7 @@ nav.active .hamburger-menu .bars::after {
     display: block;
     width: 100%;
     height: auto;
-    color: var(--darkNavy);
+    color: var(--white);
     border: solid 2px var(--grey);
     contain: layout;
     cursor: pointer;
@@ -218,11 +218,13 @@ nav.active .hamburger-menu .bars::after {
 }
 .lightbox .previous {
     left: 0;
-    transform: translateY(-50%) translateX(-100%);
+    transform: translateY(-50%);
+    margin-left: -5rem;
 }
 .lightbox .next {
     right: 0;
-    transform: translateY(-50%) translateX(100%);
+    transform: translateY(-50%);
+    margin-right: -5rem;
 }
 .gallery-overlay {
     opacity: 0;
